--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,11 +84,9 @@ repos:
     rev: 8.0.1
     hooks:
       - id: buildifier
-        files: ^(src|cpp|python|rllib|ci|release)(/[^/]+)*/BUILD(\.bazel)?$
-        exclude: ^(cpp/example/.*)$
+        files: ^(src|cpp|python|rllib|ci|release|java)(/[^/]+)*/BUILD(\.bazel)?$|^BUILD.bazel$
       - id: buildifier-lint
-        files: ^(src|cpp|python|rllib|ci|release)(/[^/]+)*/BUILD(\.bazel)?$
-        exclude: ^(cpp/example/.*)$
+        files: ^(src|cpp|python|rllib|ci|release|java)(/[^/]+)*/BUILD(\.bazel)?$|^BUILD.bazel$
 
   - repo: https://github.com/psf/black
     rev: 22.10.0
