[RLlib] Fix bug in `restore_from_path` such that connector states are also restored on remote `EnvRunner`s. (#54672)
## Why are these changes needed?

If a user has stateful connectors and uses remote `EnvRunner`s in her
experiments. Restoring from checkpoint will not restore the full state
b/c the remote `EnvRunner`s' connector states are not restored.
Furthermore, using no local `EnvRunner` (i.e.
`create_local_env_runner=False`) would result in no connector states
stored. This PR fixes this by:

- Synching the states between the local `EnvRunner` and the remote ones
after the `Algorithm` has restored everything else.
- Adding a test to ensure that connector states after restoring from
state are all the same.
- Fixing `save_to_path` and `restore_from_path` in case no local
`EnvRunner` is used by constructing directories `path /
COMPONENT_ENV_TO_MODULE_CONNECTOR` and `path /
COMPONENT_MODULE_TO_ENV_CONNECTOR` to store stateful connectors and
reading from them.

## Related issue number

<!-- For example: "Closes #1234" -->

## Checks

- [x] I've signed off every commit(by using the -s flag, i.e., `git
commit -s`) in this PR.
- [x] I've run `scripts/format.sh` to lint the changes in this PR.
- [x] I've included any doc changes needed for
https://docs.ray.io/en/master/.
- [ ] I've added any new APIs to the API Reference. For example, if I
added a
method in Tune, I've added it in `doc/source/tune/api/` under the
           corresponding `.rst` file.
- [x] I've made sure the tests are passing. Note that there might be a
few flaky tests, see the recent failures at https://flakey-tests.ray.io/
- Testing Strategy
   - [x] Unit tests
   - [ ] Release tests
   - [ ] This PR is not tested :(

---------

Signed-off-by: simonsays1980 <simon.zehnder@gmail.com>
Co-authored-by: Artur Niederfahrenhorst <attaismyname@googlemail.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1914,6 +1914,17 @@ py_test(
 )
 
 py_test(
+    name = "test_algorithm_save_load_checkpoint_connectors",
+    size = "medium",
+    srcs = ["algorithms/tests/test_algorithm_save_load_checkpoint_connectors.py"],
+    tags = [
+        "algorithms_dir",
+        "algorithms_dir_generic",
+        "team:rllib",
+    ],
+)
+
+py_test(
     name = "test_algorithm_rl_module_restore",
     size = "large",
     srcs = ["algorithms/tests/test_algorithm_rl_module_restore.py"],
