--- a/ci/raydepsets/BUILD.bazel
+++ b/ci/raydepsets/BUILD.bazel
@@ -26,7 +26,11 @@ py_test(
     name = "test_cli",
     srcs = ["test_cli.py"],
     data = [
+        "test_data/requirement_constraints_test.txt",
+        "test_data/requirements_test.txt",
         "test_data/test.config.yaml",
+        "test_data/requirements_compiled_test.txt",
+        "test_data/requirements_compiled_test_update.txt",
     ],
     exec_compatible_with = ["//:hermetic_python"],
     tags = [
