--- a/ci/raydepsets/test_data/test.config.yaml
+++ b/ci/raydepsets/test_data/test.config.yaml
@@ -1,13 +1,14 @@
 depsets:
   - name: ray_base_test_depset
-    requirements:
-      - python/requirements.txt
-    constraints:
-      - python/requirements_compiled_ray_test_py311_cpu.txt
-    output: tests/requirements_compiled_test.txt
     operation: compile
+    requirements:
+      - requirements_test.txt
+    constraints:
+      - requirement_constraints_test.txt
+    output: requirements_compiled.txt
+
   - name: general_depset
     operation: compile
     requirements:
-      - python/requirements.txt
-    output: python/test/requirements_compiled_general_py311_cpu.txt
+      - requirements_test.txt
+    output: requirements_compiled_general.txt
