[ci] raydepsets: subset operation (#54602)
Adding subset operation to raydepsets

Accepts existing dependency set and requirement files
Checks whether the requirement files are a subset of the existing
dependency set requirement files
Subsets the existing dependency set using the requirement files

---------

Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/ci/raydepsets/depset.config.yaml
+++ b/ci/raydepsets/depset.config.yaml
@@ -13,3 +13,9 @@ depsets:
     requirements:
       - python/requirements.txt
     output: python/test/requirements_compiled_general_py311_cpu.txt
+  - name: subset_general_depset
+    operation: subset
+    source_depset: general_depset
+    requirements:
+      - ci/raydepsets/cloud-requirements.txt
+    output: python/test/requirements_compiled_subset_general_py311_cpu.txt
