[ci] raydepsets: adding expand operation (#54608)
adding expand operation and unit tests

---------

Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/ci/raydepsets/BUILD.bazel
+++ b/ci/raydepsets/BUILD.bazel
@@ -28,6 +28,7 @@ py_test(
     data = [
         "test_data/requirement_constraints_test.txt",
         "test_data/requirements_compiled_test.txt",
+        "test_data/requirements_compiled_test_expand.txt",
         "test_data/requirements_compiled_test_update.txt",
         "test_data/requirements_test.txt",
         "test_data/test.config.yaml",
