[core] Enforce use of raylet client pool (#54925)
Signed-off-by: joshlee <joshlee@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -255,11 +255,11 @@ cc_grpc_library(
 # Node manager server and client.
 ray_cc_library(
     name = "node_manager_rpc",
-    srcs = ["src/ray/rpc/node_manager/node_manager_client_pool.cc"],
+    srcs = ["src/ray/rpc/node_manager/raylet_client_pool.cc"],
     hdrs = [
         "src/ray/rpc/node_manager/node_manager_client.h",
-        "src/ray/rpc/node_manager/node_manager_client_pool.h",
         "src/ray/rpc/node_manager/node_manager_server.h",
+        "src/ray/rpc/node_manager/raylet_client_pool.h",
     ],
     deps = [
         ":grpc_common_lib",
@@ -425,6 +425,14 @@ ray_cc_library(
         ["src/mock/**/*.h"],
         exclude = ["src/mock/ray/common/ray_syncer/ray_syncer.h"],
     ),
+)
+
+ray_cc_library(
+    name = "ray_fakes",
+    hdrs = glob(["src/fakes/**/*.h"]),
+    deps = [
+        "//src/ray/raylet_client:raylet_client_lib",
+    ],
 )
 
 ray_cc_library(
