--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -17,7 +17,7 @@ load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
 load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@rules_python//python:defs.bzl", "py_library", "py_runtime", "py_runtime_pair")
-load("//bazel:ray.bzl", "COPTS", "FLATC_ARGS", "PYX_COPTS", "PYX_SRCS", "copy_to_workspace", "ray_cc_binary", "ray_cc_library", "ray_cc_test")
+load("//bazel:ray.bzl", "COPTS", "FLATC_ARGS", "PYX_COPTS", "PYX_SRCS", "ray_cc_binary", "ray_cc_library", "ray_cc_test")
 
 package(
     default_visibility = ["//visibility:public"],
@@ -1131,46 +1131,39 @@ pkg_zip(
     visibility = ["//visibility:private"],
 )
 
-copy_to_workspace(
-    name = "cp_core_py_proto",
-    srcs = [":core_py_proto"],
-    dstdir = "python/ray/core/generated",
-)
-
-copy_to_workspace(
-    name = "cp_serve_py_proto",
-    srcs = [":serve_py_proto"],
-    dstdir = "python/ray/serve/generated",
-)
-
 genrule(
     name = "install_py_proto",
     srcs = [
-        ":cp_core_py_proto",
-        ":cp_serve_py_proto",
-
-        # Adding these pkg files rules make sure that there are no naming
-        # conflicts between the generated files and the pkg files.
         ":core_py_proto_zip",
         ":serve_py_proto_zip",
     ],
     outs = ["install_py_proto.out"],
     cmd = """
+        set -euo pipefail
+
+        rm -rf python/ray/core/generated/*
+        rm -rf python/ray/serve/generated/*
+
+        unzip -o -q $(location :core_py_proto_zip) -d python
+        unzip -o -q $(location :serve_py_proto_zip) -d python
+
+        files=(
+            $$(ls python/ray/core/generated/*_pb2*.py)
+            $$(ls python/ray/serve/generated/*_pb2*.py)
+        )
+
         # NOTE(hchen): Protobuf doesn't allow specifying Python package name. So we use this `sed`
         # command to change the import path in the generated file.
-        # shellcheck disable=SC2006
-        files=(
-            `ls python/ray/core/generated/*_pb2*.py` \
-            `ls python/ray/serve/generated/*_pb2*.py` \
-            )
         sed -i -E 's/from src.ray.protobuf/from ./' "$${files[@]}"
         # Help the generated serve files to have the correct module
-        serve_files=(`ls python/ray/serve/generated/*_pb2*.py`)
+        serve_files=($$(ls python/ray/serve/generated/*_pb2*.py))
         sed -i -E 's/'"'"'src.ray.protobuf./'"'"'ray.serve.generated./' "$${serve_files[@]}"
+
         # TODO(sang): Build our own proto instead of creating a new proto for opencensus separately.
         # https://github.com/ray-project/ray/issues/31358
         sed -i -E 's/from opencensus.proto.metrics.v1 import/from . import/' "$${files[@]}"
         sed -i -E 's/from opencensus.proto.resource.v1 import/from . import/' "$${files[@]}"
+
         echo "$${PWD}" > $@
     """,
     local = 1,
