[Core] Update V2 Autoscaler to support scheduling using Node labels and LabelSelector API (#53578)
Signed-off-by: Ryan O'Leary <ryanaoleary@google.com>
Signed-off-by: Ryan O'Leary <113500783+ryanaoleary@users.noreply.github.com>
Co-authored-by: Rueian <rueiancsie@gmail.com>
Co-authored-by: Dhyey Shah <dhyey2019@gmail.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/src/ray/protobuf/BUILD
+++ b/src/ray/protobuf/BUILD
@@ -351,6 +351,10 @@ cc_proto_library(
 proto_library(
     name = "autoscaler_proto",
     srcs = ["autoscaler.proto"],
+    deps = [
+        ":common_proto",
+        ":runtime_env_common_proto",
+    ],
 )
 
 cc_proto_library(
