[ci] raydepsets: build graph execution (#54610)
adding build graph execution for raydepsets

---------

Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/ci/raydepsets/BUILD.bazel
+++ b/ci/raydepsets/BUILD.bazel
@@ -12,6 +12,7 @@ py_library(
         ci_require("bazel-runfiles"),
         ci_require("click"),
         ci_require("pyyaml"),
+        ci_require("networkx"),
     ],
 )
 
