--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -787,6 +787,7 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         ":local_object_manager_interface",
+        ":ray_fakes",
         ":ray_mock",
         ":raylet_lib",
         "//src/ray/util:macros",
