[release test] fix broken release test configs (#55061)
introduced by rllib release teste changes

also run ci tools tests when release test configs are changed. this
makes sure that release test configs are sanity checked on CI tests.

Signed-off-by: Lonnie Liu <lonnie@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2664,7 +2664,7 @@
       runtime_env:
         - RLLIB_TEST_NO_JAX_IMPORT=1
         - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/ray/.mujoco/mujoco210/bin
-    cluster_compute: 4gpu_64cpus.yaml
+    cluster_compute: 4gpus_64cpus.yaml
 
   run:
     timeout: 36000  # 10h
@@ -2678,7 +2678,7 @@
       env: gce
       frequency: manual
       cluster:
-        cluster_compute: 4gpu_64cpus_gce.yaml
+        cluster_compute: 4gpus_64cpus_gce.yaml
 
 # --------------------------
 # IMPALA
