[core] Adding a noexcept utility to convert a string into an integer type. (#54927)
[core] Adding a noexcept utility to convert a string into an integer
type.

- Added tests.
- Removed the dependency of logging on string_utils (which leads to a
circular dependency of the form
string_utils > status_or > status > logging > string_utils.
- Removed some unused imports.

---------

Signed-off-by: irabbani <irabbani@anyscale.com>
Signed-off-by: Ibrahim Rabbani <irabbani@anyscale.com>
Signed-off-by: jugalshah291 <shah.jugal291@gmail.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -722,6 +722,7 @@ ray_cc_test(
     deps = [
         ":ray_mock",
         ":worker_pool",
+        "//src/ray/util:path_utils",
         "@com_google_googletest//:gtest_main",
     ],
 )
