--- a/src/ray/common/BUILD.bazel
+++ b/src/ray/common/BUILD.bazel
@@ -21,6 +21,7 @@ ray_cc_library(
         "//src/ray/protobuf:common_cc_proto",
         "//src/ray/util",
         "//src/ray/util:cmd_line_utils",
+        "//src/ray/util:path_utils",
         "@boost//:optional",
         "@com_google_googletest//:gtest",
     ],
@@ -291,7 +292,6 @@ ray_cc_library(
     hdrs = ["status.h"],
     deps = [
         ":source_location",
-        "//src/ray/util:logging",
         "//src/ray/util:macros",
         "//src/ray/util:visibility",
         "@boost//:system",
@@ -311,6 +311,7 @@ ray_cc_library(
     deps = [
         ":macros",
         ":status",
+        "//src/ray/util:logging",
         "@com_google_absl//absl/base:core_headers",
     ],
 )
