--- a/src/ray/core_worker/test/BUILD.bazel
+++ b/src/ray/core_worker/test/BUILD.bazel
@@ -294,6 +294,7 @@ ray_cc_test(
         "//src/ray/common:test_util",
         "//src/ray/core_worker:actor_creator",
         "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/util:path_utils",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
