--- a/src/ray/util/tests/BUILD.bazel
+++ b/src/ray/util/tests/BUILD.bazel
@@ -74,6 +74,7 @@ ray_cc_test(
         "//src/ray/protobuf:gcs_cc_proto",
         "//src/ray/util",
         "//src/ray/util:event",
+        "//src/ray/util:path_utils",
         "@boost//:range",
         "@com_google_googletest//:gtest_main",
     ],
@@ -98,6 +99,7 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//src/ray/util:filesystem",
+        "//src/ray/util:path_utils",
         "//src/ray/util:string_utils",
         "@com_google_googletest//:gtest_main",
     ],
@@ -120,6 +122,7 @@ ray_cc_test(
         "//src/ray/common:status",
         "//src/ray/util",
         "//src/ray/util:env",
+        "//src/ray/util:path_utils",
         "@boost//:asio",
         "@com_google_absl//absl/strings:str_format",
         "@com_google_googletest//:gtest_main",
@@ -157,6 +160,7 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//:raylet_lib",
+        "//src/ray/util:path_utils",
         "@com_google_googletest//:gtest_main",
     ],
 )
@@ -386,6 +390,18 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//src/ray/common:file_system_monitor",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+ray_cc_test(
+    name = "string_utils_test",
+    size = "small",
+    srcs = ["string_utils_test.cc"],
+    tags = ["team:core"],
+    deps = [
+        "//src/ray/common:status_or",
+        "//src/ray/util:string_utils",
         "@com_google_googletest//:gtest_main",
     ],
 )
