--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -4,7 +4,7 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
 load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
 load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
-load("@rules_python//python:defs.bzl", "py_test")
+load("@rules_python//python:defs.bzl", "py_binary", "py_test")
 load("//bazel:python.bzl", "py_test_module_list")
 load("//bazel:ray.bzl", "COPTS")
 
@@ -211,6 +211,18 @@ genrule(
     """,
     local = 1,
     visibility = ["//visibility:private"],
+)
+
+py_binary(
+    name = "gen_ray_cpp_pkg",
+    srcs = ["gen_ray_cpp_pkg.py"],
+    data = [
+        ":ray_cpp_pkg.zip",
+    ],
+    visibility = ["//visibility:private"],
+    deps = [
+        "//bazel:gen_extract",
+    ],
 )
 
 # test
