--- a/java/BUILD.bazel
+++ b/java/BUILD.bazel
@@ -9,6 +9,7 @@ load("@rules_java//java:java_test.bzl", "java_test")
 load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
 load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
 load("@rules_proto_grpc//java:defs.bzl", "java_proto_compile")
+load("@rules_python//python:defs.bzl", "py_binary")
 load("//bazel:ray.bzl", "define_java_module", "native_java_library")
 
 exports_files([
@@ -498,4 +499,16 @@ genrule(
     local = 1,
     tags = ["no-cache"],
     visibility = ["//visibility:private"],
+)
+
+py_binary(
+    name = "gen_ray_java_pkg",
+    srcs = ["gen_ray_java_pkg.py"],
+    data = [
+        ":ray_java_pkg.zip",
+    ],
+    visibility = ["//visibility:private"],
+    deps = [
+        "//bazel:gen_extract",
+    ],
 )
